# b3

./: .gitignore  sql_app.db
backend/: Dockerfile  entrypoint.sh  pyproject.toml  sql_app.db
backend/migrations/: env.py
backend/migrations/versions/: 0fe5714c09a9_initial_migration.py
backend/src/bytardag/: auth.py.nouse  authorization_header_elements.py  cli.py.nouse  config.py  console.py  database.py  dependencies.py  json_web_token.py  main.py  models.py  schemas.py
backend/src/bytardag/routers/: events.py  rows.py  sellers.py  sheets.py
frontend/: Caddyfile  Dockerfile  angular.json  package-lock.json  package.json
frontend/.storybook/: main.ts
frontend/src/: main.ts
frontend/src/app/: app.component.html  app.component.ts  app.routes.ts  routes.ts  row.ts  sheet.service.ts  sheet.ts
frontend/src/app/core/models/: sheet.model.ts  sticker.model.ts
frontend/src/app/core/services/: sheet.service.ts
frontend/src/app/features/callback/: callback.component.ts
frontend/src/app/features/dashboard/: dashboard.component.html  dashboard.component.ts
frontend/src/app/features/home/: home.component.html  home.component.ts
frontend/src/app/features/profile/: profile.component.html  profile.component.ts
frontend/src/app/features/sheets/: new-sheet.component.html  new-sheet.component.spec.ts  new-sheet.component.ts  row.component.html  row.component.ts  sheets.component.html  (+2 more)
frontend/src/app/row/: row.component.html  row.component.ts
frontend/src/app/sheets/: sheets.component.html  sheets.component.ts
frontend/src/environments/: environment.ts
(+20 files in other folders)
