[tool.poetry]
name = "bytardag"
version = "0.1.0"
description = ""
authors = ["Linus Törngren <linus@etnolit.se>"]
readme = "README.md"
packages = [{include = "bytardag", from = "src"}]

[tool.poetry.scripts]
bytardag = 'bytardag.console:cli'

[tool.poetry.dependencies]
python = "^3.11"
python-jose-cryptodome = "^1.3.2"
sqlalchemy = "^2.0.25"
psycopg2-binary = "^2.9.9"
pendulum = "^3.0.0"
alembic = "^1.13.1"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.26.0"}
secure = "^0.3.0"
pyjwt = "^2.8.0"
pydantic = "^2.5.3"
python-dotenv = "^1.0.1"
cryptography = "^42.0.1"
gunicorn = "^22.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
